--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -46,3 +46,13 @@
   display: flex;
   align-items: center;
 }
+
+.message {
+  font-size: 1.5rem;
+}
+.success-message {
+  color: rgb(46, 214, 46);
+}
+.error-message {
+  color: rgb(221, 39, 39);
+}
